syntax = "proto3";

package _api;

service UserCreate{
    rpc Add(UserCreateRequest) returns (Response) {}
}

message UserCreateRequest{
    bytes publicKey = 1;
    bytes mesKey = 2;
    string imgLink = 3;
    bytes sign = 4;
}

message Response{
    bool passed = 1;
}